--- a/package.json
+++ b/package.json
@@ -11,9 +11,16 @@
   "license": "ISC",
   "dependencies": {
     "express": "4.17.1",
-    "puppeteer": "^5.3.1"
+    "puppeteer": "^5.3.1",
+    "rewire": "^5.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.12"
+    "babel-plugin-rewire": "^1.2.0",
+    "nodemon": "^2.0.12",
+    "jest": "^22.4.3"
+  },
+  "jest": {
+    "verbose": true,
+    "testURL": "http://localhost/"
   }
 }
